# dynoagent

./: .gitignore  README.md  __init__.py  dyno_agent_with_tools.py  pyproject.toml  requirements.txt  setup.py  team.py
.github/workflows/: tests.yml
dynoagent/: __init__.py  cli.py  core.py  dyno_agent_with_tools.py  task_complexity.py  team.py
dynoagent/dynoagent/: __init__.py  cli.py
examples/: README.md  dynamic.py  parallel.py  sequential.py
tests/: conftest.py  test_agent.py  test_cli.py  test_dyno_agent_with_tools.py  test_edge_cases.py  test_examples.py  test_task_complexity.py  test_team.py
